crates/parsing/tests/snapshots/grammar_tests__qualified-ado-expression.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: Hello.ado
Start { kind: QualifiedAdo }
  Start { kind: QualifiedPrefix }
    Start { kind: NameRef }
      Token { kind: Upper }
    Finish
    Token { kind: Period }
  Finish
  Token { kind: AdoKw }
Finish

