crates/parsing/tests/snapshots/grammar_tests__qualified-application.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: Hello.as Hello.we + Hello.go
Start { kind: OperatorChain }
  Start { kind: ApplicationExpression }
    Start { kind: VariableExpression }
      Start { kind: QualifiedName }
        Start { kind: QualifiedPrefix }
          Start { kind: NameRef }
            Token { kind: Upper }
          Finish
          Token { kind: Period }
        Finish
        Start { kind: NameRef }
          Token { kind: Lower }
        Finish
      Finish
    Finish
    Start { kind: VariableExpression }
      Start { kind: QualifiedName }
        Start { kind: QualifiedPrefix }
          Start { kind: NameRef }
            Token { kind: Upper }
          Finish
          Token { kind: Period }
        Finish
        Start { kind: NameRef }
          Token { kind: Lower }
        Finish
      Finish
    Finish
  Finish
  Start { kind: OneOrMore }
    Start { kind: Pair }
      Token { kind: Operator }
      Start { kind: VariableExpression }
        Start { kind: QualifiedName }
          Start { kind: QualifiedPrefix }
            Start { kind: NameRef }
              Token { kind: Upper }
            Finish
            Token { kind: Period }
          Finish
          Start { kind: NameRef }
            Token { kind: Lower }
          Finish
        Finish
      Finish
    Finish
  Finish
Finish

