crates/parsing/tests/snapshots/grammar_tests__qualified-constructor.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: Hello.World $
Start { kind: QualifiedName }
  Start { kind: QualifiedPrefix }
    Start { kind: NameRef }
      Token { kind: Upper }
    Finish
    Token { kind: Period }
  Finish
  Start { kind: NameRef }
    Token { kind: Upper }
  Finish
Finish

