crates/parsing/tests/snapshots/grammar_tests__qualified-error.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: Hello.World.(import $
Start { kind: QualifiedName }
  Start { kind: QualifiedPrefix }
    Start { kind: NameRef }
      Token { kind: Upper }
    Finish
    Token { kind: Period }
    Start { kind: NameRef }
      Token { kind: Upper }
    Finish
    Token { kind: Period }
  Finish
  Token { kind: LeftParenthesis }
  Start { kind: NameRef }
    Start { kind: Error }
      Error { message: "expected an operator" }
    Finish
  Finish
  Error { message: "expected RightParenthesis" }
Finish

