crates/parsing/tests/snapshots/grammar_tests__qualified-lower-name.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: Hello.as
Start { kind: VariableExpression }
  Start { kind: QualifiedName }
    Start { kind: QualifiedPrefix }
      Start { kind: NameRef }
        Token { kind: Upper }
      Finish
      Token { kind: Period }
    Finish
    Start { kind: NameRef }
      Token { kind: Lower }
    Finish
  Finish
Finish

