crates/parsing/tests/snapshots/grammar_tests__qualified-operator-name-not-operator.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: Hello.(as)
Start { kind: OperatorNameExpression }
  Start { kind: QualifiedName }
    Start { kind: QualifiedPrefix }
      Start { kind: NameRef }
        Token { kind: Upper }
      Finish
      Token { kind: Period }
    Finish
    Start { kind: Wrapped }
      Token { kind: LeftParenthesis }
      Start { kind: Error }
        Error { message: "expected Operator" }
      Finish
      Token { kind: RightParenthesis }
    Finish
  Finish
Finish

