crates/parsing/tests/snapshots/grammar_tests__qualified-operator-name.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: Hello.(+)
Start { kind: OperatorNameExpression }
  Start { kind: QualifiedName }
    Start { kind: QualifiedPrefix }
      Start { kind: NameRef }
        Token { kind: Upper }
      Finish
      Token { kind: Period }
    Finish
    Start { kind: Wrapped }
      Token { kind: LeftParenthesis }
      Start { kind: NameRef }
        Token { kind: Operator }
      Finish
      Token { kind: RightParenthesis }
    Finish
  Finish
Finish

