crates/parsing/tests/snapshots/grammar_tests__qualified-plural.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: (hello) world
Start { kind: QualifiedName }
  Start { kind: QualifiedPrefix }
  Finish
  Token { kind: LeftParenthesis }
  Start { kind: NameRef }
    Start { kind: Error }
      Error { message: "expected an operator" }
    Finish
  Finish
  Token { kind: RightParenthesis }
Finish
Start { kind: QualifiedName }
  Start { kind: QualifiedPrefix }
  Finish
  Start { kind: NameRef }
    Token { kind: Lower }
  Finish
Finish

